src/stream/src/executor/over_window/snapshots/risingwave_stream__executor__over_window__eowc__tests__over_window.snap
---
source: src/stream/src/executor/over_window/eowc.rs
expression: "executor_snapshot(Box::new(async ||\n                create_executor(calls.clone(), store.clone()).await),\n        SnapshotEvent::parse(inputs)).await"
---
- input: barrier
  output:
  - barrier
- input: !chunk |-
    +---+---+----+-----+----+
    | + | 1 | p1 | 100 | 10 |
    | + | 1 | p1 | 101 | 16 |
    | + | 4 | p2 | 200 | 20 |
    +---+---+----+-----+----+
  output:
  - !watermark
    col_idx: 0
    val: 1
  - !chunk |-
    +---+---+----+-----+----+---+----+
    | + | 1 | p1 | 100 | 10 |   | 16 |
    +---+---+----+-----+----+---+----+
- input: !chunk |-
    +---+---+----+-----+----+
    | + | 5 | p1 | 102 | 18 |
    | + | 7 | p2 | 201 | 22 |
    | + | 8 | p3 | 300 | 33 |
    +---+---+----+-----+----+
  output:
  - !chunk |-
    +---+---+----+-----+----+----+----+
    | + | 1 | p1 | 101 | 16 | 10 | 18 |
    | + | 4 | p2 | 200 | 20 |    | 22 |
    +---+---+----+-----+----+----+----+
- input: barrier
  output:
  - barrier
- input: recovery
  output: []
- input: barrier
  output:
  - barrier
- input: !chunk |-
    +---+----+----+-----+----+
    | + | 10 | p1 | 103 | 13 |
    | + | 12 | p2 | 202 | 28 |
    | + | 13 | p3 | 301 | 39 |
    +---+----+----+-----+----+
  output:
  - !watermark
    col_idx: 0
    val: 5
  - !chunk |-
    +---+---+----+-----+----+----+----+
    | + | 5 | p1 | 102 | 18 | 16 | 13 |
    | + | 7 | p2 | 201 | 22 | 20 | 28 |
    | + | 8 | p3 | 300 | 33 |    | 39 |
    +---+---+----+-----+----+----+----+
- input: barrier
  output:
  - barrier

