src/stream/src/executor/over_window/snapshots/risingwave_stream__executor__over_window__eowc__tests__over_window_aggregate.snap
---
source: src/stream/src/executor/over_window/eowc.rs
description: "sum over (1 preceding, 1 following)"
---
- input: barrier
  output:
  - barrier
- input: !chunk |-
    +---+---+----+-----+----+
    | + | 1 | p1 | 100 | 10 |
    | + | 1 | p1 | 101 | 16 |
    | + | 4 | p1 | 102 | 20 |
    +---+---+----+-----+----+
  output:
  - !watermark
    col_idx: 0
    val: 1
  - !chunk |-
    +---+---+----+-----+----+----+
    | + | 1 | p1 | 100 | 10 | 26 |
    | + | 1 | p1 | 101 | 16 | 46 |
    +---+---+----+-----+----+----+

